--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon",
     "debug": "nodemon --exec node --inspect-brk=0.0.0.0 -r ts-node/register ./src/app.ts",
     "ts-node": "ts-node ./src/app.ts",
-    "build": "tsc",
+    "build": "tsc && cp src/schemas/*.graphql dist/schemas",
     "start": "node dist/app.js",
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest ./src",
@@ -32,7 +32,10 @@
   "author": "Challenger",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-koa": "^3.6.7",
+    "apollo-server-plugin-base": "^3.5.2",
     "dotenv": "^10.0.0",
+    "graphql": "^16.4.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
@@ -48,7 +51,7 @@
   },
   "devDependencies": {
     "@shopify/jest-koa-mocks": "^3.0.1",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^27.5.0",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/koa": "^2.13.1",
     "@types/koa-bodyparser": "^4.3.0",
@@ -64,7 +67,7 @@
     "eslint-config-airbnb": "^18.2.1",
     "eslint-plugin-import": "^2.23.3",
     "husky": "^6.0.0",
-    "jest": "^27.0.4",
+    "jest": "^27.5.1",
     "jsdoc": "^3.6.10",
     "nodemon": "^2.0.7",
     "prettier": "2.3.0",
